# ChangeLog for net-im/psi
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/psi/ChangeLog,v 1.33 2004/05/24 11:37:30 humpback Exp $

  24 May 2004; Gustavo Felisberto <humpback@gentoo.org>; :
  Adding version 0.9.2_rc2 wich is hardmasked

  27 Apr 2004; Guy Martin <gmsoft@gentoo.org> psi-0.9.1.ebuild:
  Marked stable on hppa.

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> psi-0.9-r1.ebuild:
  Add inherit eutils

  25 Apr 2004; Guy Martin <gmsoft@gentoo.org> psi-0.9-r1.ebuild:
  Marked stable on hppa.

  28 Mar 2004; Jason Wever <weeve@gentoo.org> psi-0.9.1.ebuild:
  Added ~sparc keyword.

  28 Feb 2004; Gustavo Felisberto <humpback@gentoo.org>; psi-0.9.1.ebuild:
  stable on x86. Added metadata.xml

  09 Feb 2004; Dylan Carlson <absinthe@gentoo.org> psi-0.9.1.ebuild:
  added amd64 keyword.  removed ~alpha because of bad dependencies.

  07 Feb 2004; Lars Weiler <pylon@gentoo.org> psi-0.9-r1.ebuild:
  stable on ppc

  05 Feb 2004; Caleb Tennis <caleb@gentoo.org> psi-0.9.1.ebuild:
  Allow settings writing to take place in the Qt settings directory.

  20 Jan 2004; Caleb Tennis <caleb@gentoo.org> psi-0.9.1.ebuild,
  psi-0.9.ebuild:
  Re-add dep on qca-tls.

*psi-0.9.1 (18 Jan 2004)

  18 Jan 2004; Caleb Tennis <caleb@gentoo.org> psi-0.9.1.ebuild:
  New version, from bug #37051

  14 Jan 2004; Aron Griffis <agriffis@gentoo.org> psi-0.9-r1.ebuild:
  add ~alpha

  07 Jan 2004; Martin Holzer <mholzer@gentoo.org> psi-0.9-r1.ebuild,
  psi-0.9.ebuild:
  adding RESTRICT=nomirror

  03 Jan 2004; Caleb Tennis <caleb@gentoo.org> psi-0.9-r1.ebuild,
  psi-0.9.ebuild:
  Move need-qt over to dep directly in ebuild

*psi-0.9-r1 (24 Oct 2003)

  24 Oct 2003; Hanno Boeck <hanno@gentoo.org> psi-0.9-r1.ebuild,
  files/psi_gpg_fix:
  Fix for latest gnupg versions, provided by Martin Ehmsen in bug 27359.

  21 Oct 2003; Luke-Jr <luke-jr@gentoo.org> psi-0.9.ebuild,