@@ -1,11 +1,7 @@
-MD5 506071e3a0d2b8da792810474379d329 psi-0.9.2_rc2.ebuild 849
+MD5 0d37b40029ddaa34b2df6bb855930b45 psi-0.9.2.ebuild 841
 MD5 9b91ead14acbf0da98d3b33e75c67e79 metadata.xml 306
-MD5 2a17f39ef0286a2a2417d9ce5c009751 ChangeLog 4376
+MD5 7bc5f632fcaec9331825aa2c72ff34bd ChangeLog 4595
 MD5 14bd743f2a50e35768ea920ebb6aa1a3 psi-0.9.1.ebuild 842
-MD5 492d63e85bf6250c1e206f03c31d29d8 psi-0.9.ebuild 1348
-MD5 2d7569fd8332177afc83f044850fc7b0 psi-0.9-r1.ebuild 1424
+MD5 dab2c4d26326cec55a905a1a38351d51 files/digest-psi-0.9.2 63
 MD5 d27222ab1b988a3cb4364e0a66b7ff2a files/digest-psi-0.9.1 62
-MD5 daa9f6531b8f039208d594123e29338b files/digest-psi-0.9.2_rc2 69
-MD5 e4acc00d7ae1d10a2788e5db6ba73dbc files/digest-psi-0.9 119
 MD5 c43f1bfd60e72f69346f0a67288c62e8 files/psi_gpg_fix 1193
-MD5 e4acc00d7ae1d10a2788e5db6ba73dbc files/digest-psi-0.9-r1 119
