@@ -1,12 +1,12 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/psi/Attic/psi-0.9.2_rc2.ebuild,v 1.1 2004/05/24 11:37:30 humpback Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/psi/Attic/psi-0.9.2.ebuild,v 1.1 2004/06/10 14:48:35 humpback Exp $
 
 IUSE="kde ssl crypt"
-MY_PVR="0.9.2-test2"
-S=${WORKDIR}/psi-${MY_PVR}
+RESTRICT="nomirror"
+S=${WORKDIR}/${P}
 QV="2.0"
-SRC_URI="http://psi.affinix.com/beta/psi-${MY_PVR}.tar.bz2"
+SRC_URI="mirror://sourceforge/psi/${P}.tar.bz2"
 DESCRIPTION="QT 3.x Jabber Client, with Licq-like interface"
 HOMEPAGE="http://psi.affinix.com"
 
@@ -27,5 +27,6 @@ src_compile() {
 }
 
 src_install() {
+	dodoc README TODO
 	make INSTALL_ROOT="${D}" install
 }
