@@ -1,6 +1,12 @@
 # ChangeLog for net-im/psi
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/psi/ChangeLog,v 1.33 2004/05/24 11:37:30 humpback Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/psi/ChangeLog,v 1.34 2004/06/10 14:48:35 humpback Exp $
+
+*psi-0.9.2 (10 Jun 2004)
+
+  10 Jun 2004; Gustavo Felisberto <humpback@gentoo.org>; psi-0.9-r1.ebuild,
+  psi-0.9.2.ebuild, psi-0.9.2_rc2.ebuild, psi-0.9.ebuild:
+  Removing older versions and updating to the latest 0.9.2
 
   24 May 2004; Gustavo Felisberto <humpback@gentoo.org>; :
   Adding version 0.9.2_rc2 wich is hardmasked
